; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/dreamcast/extr_viddc.c_VIDDCVdp1SystemClipping.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/dreamcast/extr_viddc.c_VIDDCVdp1SystemClipping.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i8*, i8*, i8*, i8* }

@Vdp1Ram = common dso_local global i32 0, align 4
@Vdp1Regs = common dso_local global %struct.TYPE_2__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @VIDDCVdp1SystemClipping to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @VIDDCVdp1SystemClipping() #0 {
  %1 = load i32, i32* @Vdp1Ram, align 4
  %2 = load %struct.TYPE_2__*, %struct.TYPE_2__** @Vdp1Regs, align 8
  %3 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %2, i32 0, i32 0
  %4 = load i64, i64* %3, align 8
  %5 = add nsw i64 %4, 12
  %6 = call i8* @T1ReadWord(i32 %1, i64 %5)
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** @Vdp1Regs, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 4
  store i8* %6, i8** %8, align 8
  %9 = load i32, i32* @Vdp1Ram, align 4
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** @Vdp1Regs, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = add nsw i64 %12, 14
  %14 = call i8* @T1ReadWord(i32 %9, i64 %13)
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** @Vdp1Regs, align 8
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 3
  store i8* %14, i8** %16, align 8
  %17 = load i32, i32* @Vdp1Ram, align 4
  %18 = load %struct.TYPE_2__*, %struct.TYPE_2__** @Vdp1Regs, align 8
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = add nsw i64 %20, 20
  %22 = call i8* @T1ReadWord(i32 %17, i64 %21)
  %23 = load %struct.TYPE_2__*, %struct.TYPE_2__** @Vdp1Regs, align 8
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 2
  store i8* %22, i8** %24, align 8
  %25 = load i32, i32* @Vdp1Ram, align 4
  %26 = load %struct.TYPE_2__*, %struct.TYPE_2__** @Vdp1Regs, align 8
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i32 0, i32 0
  %28 = load i64, i64* %27, align 8
  %29 = add nsw i64 %28, 22
  %30 = call i8* @T1ReadWord(i32 %25, i64 %29)
  %31 = load %struct.TYPE_2__*, %struct.TYPE_2__** @Vdp1Regs, align 8
  %32 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %31, i32 0, i32 1
  store i8* %30, i8** %32, align 8
  ret void
}

declare dso_local i8* @T1ReadWord(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
